# graspqp

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
docker/: .env.base  (+4 more)
graspqp/: pyproject.toml  requirements.standalone.txt
graspqp/assets/ability_hand/: ability_hand.urdf  contact_points.json  eigengrasps.json  penetration_points.json
graspqp/assets/ability_hand/urdf_meshes/: contact_infos.json  index_L1_collisions_mesh_0.obj.convex.stl  index_L2_collisions_mesh_0.obj.convex.stl  palm_collisions_mesh_0.obj.convex.stl  thumb_L1_collision.obj.convex.stl  thumb_L2_collisions_mesh_0.obj.convex.stl
graspqp/assets/allegro/: allegro_hand.urdf  allegro_hand_description_right.urdf  contact_points.json  eigengrasps.json  penetration_points.json
graspqp/assets/allegro/meshes/: contact_infos.json
graspqp/assets/panda/: contact_points.json  franka_panda.urdf  penetration_points.json
graspqp/assets/panda/meshes/: contact_infos.json
graspqp/assets/robotiq2/: contact_points.json  penetration_points.json  robotiq2f_fk.pth  robotiq_2f140.urdf
graspqp/assets/robotiq2/meshes/: contact_infos.json  right_outer_finger_visuals_mesh_0.mtl  right_outer_knuckle_visuals_mesh_0.mtl
graspqp/assets/robotiq3/: contact_points.json  eigengrasps.json  penetration_points.json  robotiq_3finger_flat.urdf
graspqp/assets/robotiq3/meshes/: contact_infos.json
graspqp/assets/schunk_2f/: contact_points.json  eigengrasps.json  schunk.urdf
graspqp/assets/schunk_2f/meshes/: gripper_base_link_left.dae  gripper_finger_down.dae  symbol_1_left.dae  symbol_1_right.dae  symbol_2_left.dae  symbol_2_right.dae  translational_left.dae  translational_right.dae
graspqp/assets/schunk_2f/meshes/collisions/: base_link.STL  base_link.dae  fingers_base_link_right.STL  gripper_base_link_right.dae  gripper_finger_down.STL  gripper_finger_up.STL  gripper_finger_up.dae
graspqp/assets/schunk_2f/meshes/contacts/: gripper_finger_down.STL  gripper_finger_up.STL
graspqp/assets/shadow_hand/: contact_points.json  eigengrasps.json  penetration_points.json  shadow_hand.urdf
graspqp/assets/shadow_hand/meshes/: contact_infos.json
graspqp/src/graspqp/core/: __init__.py  energy.py  hand_model.py  initializations.py  object_model.py  optimizer.py
graspqp/src/graspqp/hands/: __init__.py  ability_hand.py  allegro.py  panda.py  robotiq2.py  robotiq3.py  schunk.py  shadow.py
graspqp/src/graspqp/metrics/: __init__.py
graspqp/src/graspqp/metrics/ops/: dexgrasp.py  registry.py  span.py  tdg.py
graspqp/src/graspqp/metrics/solver/: __init__.py  qp_solver.py  scipy_solver.py
graspqp/src/graspqp/utils/: fk.py  plot_utils.py  transforms.py  wandb_wrapper.py  warp.py
graspqp/tests/metrics/: test_metric.py  test_registry.py  test_solver.py
graspqp_isaaclab/src/: __setup.py  pyproject.toml
graspqp_isaaclab/src/config/: extension.toml
graspqp_isaaclab/src/graspqp_isaaclab/: __init__.py  env_registry.py  parser_utils.py
graspqp_isaaclab/src/graspqp_isaaclab/agents/: base.py  eval.py  multi_agent.py  static.py
graspqp_isaaclab/src/graspqp_isaaclab/assets/: ability_hand.py  allegro.py  panda.py  robotiq2f.py  robotiq3f.py  schunk2f.py  shadow_hand.py
graspqp_isaaclab/src/graspqp_isaaclab/assets/AbilityHand/: AbilityHandMimicFlat.usd  contacts.usdc
graspqp_isaaclab/src/graspqp_isaaclab/assets/Panda/: contacts.usdc  franka_panda.usd
graspqp_isaaclab/src/graspqp_isaaclab/assets/Robotiq2f/: robotiq_2f140.usd  robotiq_2f140_flat.usd
graspqp_isaaclab/src/graspqp_isaaclab/assets/Robotiq3f/: collision_mesh.usd  contacts.usdc  robotiq_3f.usd
graspqp_isaaclab/src/graspqp_isaaclab/assets/Schunk2f/: schunk.usd
graspqp_isaaclab/src/graspqp_isaaclab/assets/allegro/: allegro_hand.urdf  allegro_hand.usd  standalone_allegro.usd  standalone_gripper.usd
graspqp_isaaclab/src/graspqp_isaaclab/assets/shadow_hand/: shadow_hand.usd
graspqp_isaaclab/src/graspqp_isaaclab/models/: hand_model.py  hand_model_cfg.py  hand_model_data.py  object_model.py  object_model_cfg.py  object_model_data.py
graspqp_isaaclab/src/graspqp_isaaclab/utils/: colors.py  data.py  eval.py  utils.py  warp.py
(+59 files in other folders)
