[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "graspqp"
version = "0.0.1"
dependencies = [
    # Core libraries

    "numpy==1.26.4",
    "scipy==1.15.3",
    "matplotlib==3.10.6",
    "pytest==8.4.1",

    # Geometry / Math / 3D
    "trimesh==4.8.0",
    "transforms3d==0.4.2",
    "qpth==0.0.18",
    "lxml==6.0.1",
    "rtree==1.4.1",

    # Plotting / Visualization
    "plotly==6.3.0",

    # Utility / Infra
    "roma==1.5.4",
    "pyaml==25.7.0",
    "six==1.17.0",
    "wandb==0.21.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 500
